# skill-scanner

./: .gitignore  Dockerfile  README.md  action.yml  index.html  pyproject.toml
.agent-skills/traces/: test-skill-1.0.0-20260512185500.json
.github/workflows/: release.yml  test.yml
demos/: agent-skills-scanner-demo.html  skill-scanner-product-definition.html
demos/skill-scanner/: agent-skills-scan.py
demos/skill-scanner/benign-skill/: SKILL.md
demos/skill-scanner/frontmatter-skill/: SKILL.md
demos/skill-scanner/test-skill/: SKILL.md
demos/skill-scanner/test-skill/instructions/: auth_flow.md  process_payment.md
demos/skill-scanner/test-skill/resources/: fee-schedule.csv
demos/skill-scanner/test-skill/scripts/: init.sh  setup.py
demos/skill-scanner/test-skill/tools/: refund.yaml  transaction.yaml
deploy/helm/: Chart.yaml  values.yaml
docs/: business-positioning.md  business-strategy.md
docs/audit/: codex-round2-absorption.md  codex-round3-absorption.md
skill_scanner/: __init__.py  agent_surface.py  cli.py  engine.py  enterprise.py  parser.py  policy_engine.py  registry.py  trace_engine.py
skill_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skill_scanner/policies/: __init__.py  moderate.rego  moderate.yaml  permissive.yaml  strict.yaml
skill_scanner/scanners/: __init__.py  dependency.py  instruction.py  manifest.py  permission.py  script.py
tests/: conftest.py  test_agent_surface.py  test_cli.py  test_engine.py  test_enterprise.py  test_parser.py  test_policy.py  test_registry.py  test_trace.py
tests/scanners/: test_dependency.py  test_instruction.py  test_manifest.py  test_permission.py  test_script.py
